# neobot

./: .gitignore  pip_script.py  pyproject.toml  setup.cfg
neobot/: args_parsing.py  bot.py  context.py  discord_typing.py  discord_typing_lib.py  discord_yaml.py  env.py  main.py  team.py
