[metadata]
name = neobot-warp
version = 0.0.1
author = Philippe Warren
author_email = philippewarren31@gmail.ca
description = Un bot pour les serveurs Discord de Néorobrooke
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
url = https://github.com/philippewarren/neobot
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3
    Operating System :: OS Independent
    Natural Language :: French

[options]
# package_dir =
#     = neobot
packages =
    neobot
# py_modules =
#     funibot_cli
#     funibot_scripts
python_requires = >=3.9, <3.10
install_requires =
    discord.py >= 1.7.2
    python-dotenv >= 0.17.1
    ruamel.yaml >= 0.17.4
#     PyYAML >= 5.4.1
#     ruamel.yaml >= 0.17.2
#     pyserial >= 3.5
#     python-benedict >= 0.23.2

[options.extras_require]
dev =
    autopep8>=1.5.6
    ipython>=7.22.0
test =
    pytest>=6.2.2
    pytest-cov>=2.11.1

# [options.entry_points]
# console_scripts =
#     funibot-cli = funibot_cli:main
#     funibot-init = funibot_scripts:copier_config
#     funibot-copier-doc = funibot_scripts:copier_doc
#     funibot-erreurs = funibot_scripts:ouvrir_erreurs
#     funibot-doc = funibot_scripts:ouvrir_doc
